# dagster-x-duckdb-hackathon

./: .gitignore  README.md  dashboard.py  pyproject.toml
.devcontainer/: devcontainer.json
bdr-dagster-hackaton/: pyproject.toml
bdr-dagster-hackaton/data/: citypop.csv  citypop.sql  destinations.csv  get_historical_data.py  usergen.py  users.csv
bdr-dagster-hackaton/data/citypop/: fe82a759-5660-4076-b167-b5af197738f7.xml
bdr-dagster-hackaton/src/bdr_dagster_hackaton/defs/assets/: location_of_interests.py  travel_plans.py  user_locations.py
bdr-dagster-hackaton/src/dagster_x_duckdb_hackathon/defs/: resources.py
bdr-dagster-hackaton/src/dagster_x_duckdb_hackathon/defs/assets/: location_of_interests.py  travel_plans.py  user_locations.py
data/: citypop.csv  citypop.sql  get_historical_data.py  low_speed_trains.sql  trains.py  usergen.py  users.csv
data/citypop/: CityPOP-ETRS89.dbf  CityPOP-ETRS89.sbn  CityPOP-ETRS89.sbx  CityPOP-ETRS89.shp  CityPOP-ETRS89.shx
layouts/: dashboard.grid.json
src/dagster_x_duckdb_hackathon/defs/: __init__.py  partitions.py  resources.py  sensors.py
src/dagster_x_duckdb_hackathon/defs/assets/: airports.py  connections.py  destination_train_stations.py  destinations.py  hubs.py  recommendations.py  train_stations.py  user_destinations.py  user_train_stations.py  users.py  weather.py
